test/files/neg/t7171.check
t7171.scala:2: warning: The outer reference in this type test cannot be checked at run time.
  final case class A()
                   ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
